<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.androidapp.santtu.remotemouseandkeyboard.MainActivity">

    <TextView
        android:id="@+id/mousePad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/leftButton"
        android:background="@android:color/holo_orange_light"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:drawableBottom="@drawable/ic_mouse_black_left_24dp"
        android:id="@+id/leftButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:drawableBottom="@drawable/ic_mouse_black_right_24dp"
        android:id="@+id/rightButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyboard"
        android:drawableBottom="@drawable/ic_keyboard_black_24dp"
        android:id="@+id/keyboardButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
         />

    <LinearLayout
        android:id="@+id/linearLayoutLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/adView"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Switch
            android:id="@+id/leftSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_arrow_forward_black_24dp"
            android:text="@string/forward" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_arrow_back_black_24dp"
            android:text="@string/back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/keyboardButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/keyboardButton"
        android:layout_below="@+id/adView"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Switch
            android:id="@+id/rightSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/scrollUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_mouse_black_up_24dp"
            android:text="@string/scroll_up" />

        <Button
            android:id="@+id/scrollDownButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableBottom="@drawable/ic_mouse_black_down_24dp"
            android:text="@string/scroll_down" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="0.2"
        android:paddingTop="100dp"
        app:srcCompat="@drawable/handcursortrackpad128"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_test" />


</RelativeLayout>
